# blog-site

./: README.md  docker-compose.yml  main.py  pyproject.toml
blog/: admin.py  feeds.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py  0005_trigram_ext.py
blog/templatetags/: blog_tags.py
mysite/: settings.py  urls.py
templates/: base.html  comment.html  comment_form.html  detail.html  latest_posts.html  list.html  pagination.html  search.html  share.html
