[project]
name = "blog-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "crispy-bootstrap4>=2025.6",
    "django>=5.2.8",
    "django-crispy-forms>=2.5",
    "django-silk>=5.4.3",
    "django-taggit>=6.1.0",
    "django-unfold>=0.71.0",
    "djlint>=1.36.4",
    "python-decouple>=3.8",
]
